// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when multiple plugins are specified should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  labels:
    a: '1'
  annotations:
    b: '2'"
`;

exports[`when plugin is a CJS file should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when plugin is a CJS package should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when plugin is a ESM file should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when plugin is a ESM package should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when plugin is a TS file should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when plugin is a directory should transform manifests 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test
  namespace: foo"
`;

exports[`when validateAllManifests reports a error should throw an error 1`] = `
"
[1mcomponents/pod.js[22m - [31m✖ 1[39m

  Kind: v1/ConfigMap, Name: test
    [31m✖[39m Test error message

[31merror[39m - Generate failed (Total [31m✖ 1[39m)"
`;

exports[`when validateAllManifests reports a warning should not throw an error 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test"
`;

exports[`when validateAllManifests reports a warning should not throw an error 2`] = `
"
[1mcomponents/pod.js[22m - [33m⚠ 1[39m

  Kind: v1/ConfigMap, Name: test
    [33m⚠[39m Test warning message

[33mwarn [39m - Generate completed with warnings (Total [33m⚠ 1[39m)"
`;

exports[`when validateManifest reports a error should throw an error 1`] = `
"
[1mcomponents/pod.js[22m - [31m✖ 1[39m

  Kind: v1/ConfigMap, Name: test
    [31m✖[39m Test error message

[31merror[39m - Generate failed (Total [31m✖ 1[39m)"
`;

exports[`when validateManifest reports a warning should not throw an error 1`] = `
"apiVersion: v1
kind: ConfigMap
metadata:
  name: test"
`;

exports[`when validateManifest reports a warning should not throw an error 2`] = `
"
[1mcomponents/pod.js[22m - [33m⚠ 1[39m

  Kind: v1/ConfigMap, Name: test
    [33m⚠[39m Test warning message

[33mwarn [39m - Generate completed with warnings (Total [33m⚠ 1[39m)"
`;

exports[`when validateManifest reports multiple issues should throw an error 1`] = `
"
[1mcomponents/pod.js[22m - [31m✖ 1[39m [33m⚠ 2[39m

  Kind: v1/ConfigMap, Name: test
    [33m⚠[39m Test warning 1
    [31m✖[39m Test error 1
    [33m⚠[39m Test warning 2

[31merror[39m - Generate failed (Total [31m✖ 1[39m [33m⚠ 2[39m)"
`;
